--- a/index.css
+++ b/index.css
@@ -6,13 +6,14 @@
 .calculator {
   background: #101010;
   width: 25em;
-  margin: auto;
-  height: 100vh;
+  margin: 5em auto;
 }
 
 @media screen and(max-width: 768px) {
   .calculator {
     width: 100vw;
+    height: 100vw;
+    margin: auto;
   }
 }
 
